# qt-materials

./: .gitignore  README.md
lectures/layouts-demo/: CMakeLists.txt  main_window.cpp  main_window.h
lectures/mainwindow-demo/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.h
lectures/menu-and-dialogs-demo/: CMakeLists.txt  main_window.cpp  main_window.h
lectures/mvp-demo/: CMakeLists.txt  abstract_controller.h  controller.cpp  controller.h  main.cpp  main_window.cpp  main_window.h  model.h
lectures/painter-demo/: CMakeLists.txt  main_window.cpp  main_window.h  paint_widget.cpp  paint_widget.h  resources.qrc
lectures/timers-demo/: CMakeLists.txt  main_window.cpp  main_window.h
lectures/widgets-demo/: CMakeLists.txt  main_window.cpp  main_window.h
sem-1/: CMakeLists.txt  tests.cpp
sem-1/solution/: json_parser.cpp  json_parser.h
sem-1/statement/: json_parser.cpp  json_parser.h
sem-2/: statement.md
sem-2/Task5-Adamenko-Titliguzov/: CMakeLists.txt  main.cpp
sem-2/Task5-Kharasau-Chernushevich/: main.cpp  mainwindow.cpp
sem-2/solution/Task6/: CMakeLists.txt  main_window.h
sem-2/solutions/task-1/: CMakeLists.txt  main.cpp  widget.cpp  widget.h
sem-2/solutions/task-2/: CMakeLists.txt  widget.h
sem-2/solutions/task-3/: CMakeLists.txt  main_window.cpp
sem-2/solutions/task-5/: main.cpp  main_window.cpp  main_window.h
sem-2/solutions/task-5 (solution 2)/: CMakeLists.txt  README.md  main.cpp  main_window.cpp  main_window.h  mainwindow.h  qt-sample.pro
sem-2/solutions/task-6/: main_window.cpp
sem-2/solutions/task-6 (solution 2)/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.h
sem-2/task-3/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.h  report.md
sem-2/task_1_Kalosha/: widget.cpp
sem-2/task_2_Kalosha/: CMakeLists.txt  main.cpp  widget.cpp
sem-3/: individual-tasks-statement.md
sem-3/Flexing-Cube/: mainwindow.cpp  mainwindow.h  paintwidget.cpp  paintwidget.h
sem-3/geobebra/: main_window.cpp  paint_widget.h  plot_descriptor_widget.h  readme.md
sem-3/sem-3-solution/: CMakeLists.txt  main_window.cpp  main_window.h  painters.cpp  painters.h
sem-3/solution_task1/: CMakeLists.txt  README.md  main.cpp  main_window.cpp  main_window.h  resources.qrc
sem-3/solution_task4/: CMakeLists.txt  constants.cpp  movable_item.cpp
sem-3/solution_task4/resources/: resources.qrc
sem-3/solutions/cube/: CMakeLists.txt  main.cpp  mainwindow.cpp  timer_test.pro
sem-3/solutions/task-1/: CMakeLists.txt  README.md  main_window.h
sem-3/solutions/task-2/: CMakeLists.txt  main.cpp  resources.qrc
sem-3/solutions/task-3/: CMakeLists.txt  plot_descriptor_widget.cpp
sem-3/solutions/task-4/: CMakeLists.txt  main_window.cpp  main_window.h  movable_item.h
sem-4/geobebra/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.h  paint_widget.cpp  paint_widget.h  plot_descriptor_widget.cpp  plot_descriptor_widget.h
sem-4/solution/: CMakeLists.txt  abstract_model.h  abstract_view.cpp  abstract_view.h  controller.cpp  controller.h  main.cpp  models.cpp  models.h  resources.qrc  views.cpp  views.h
sem-4/solution/test-texts/: R.A. Salvatore - The Dark Elf Trilogy.txt  Rouling_Djoann_Garri_Potter#1_Ga.txt
sem-4/statement/: CMakeLists.txt  abstract_model.h  abstract_view.cpp  abstract_view.h  controller.h  models.h  resources.qrc
sem-5/: instruction.md  main.cpp  main_example.cpp  main_window.cpp  resources.qrc  statement.md
sem-5/solution/: CMakeLists.txt  main_window.h  resources.qrc
sem-5/solution/translations/: by.ts  de.ts  en.ts
sem-5/translations/: by.qm  de.qm  en.qm
